API Call working

--- a/Proj12NASAapp/Base.lproj/Main.storyboard
+++ b/Proj12NASAapp/Base.lproj/Main.storyboard
@@ -1,26 +1,136 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HRb-lw-cv7">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Rover Post CardVC-->
+        <scene sceneID="pN5-ex-dBA">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <collectionViewController id="1e7-pT-DEk" customClass="RoverPostCardVC" customModule="Proj12NASAapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="CuC-Y4-5Q1">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="S0P-EF-ie5">
+                            <size key="itemSize" width="160" height="93"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NasaCell" id="C4O-iW-XAv" customClass="NasaImageCell" customModule="Proj12NASAapp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="160" height="93"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="160" height="93"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qpq-RE-Gcy">
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="93"/>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cHl-1r-Q39">
+                                            <rect key="frame" x="131" y="70" width="21" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="21" id="arb-eU-hYy"/>
+                                                <constraint firstAttribute="height" constant="18" id="kTy-UX-lu8"/>
+                                            </constraints>
+                                            <state key="normal" title="Button" image="Email"/>
+                                            <connections>
+                                                <segue destination="jEC-kD-KHW" kind="modal" modalTransitionStyle="partialCurl" id="ghj-Bn-FQa"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vpM-Yg-vEr">
+                                            <rect key="frame" x="4" y="69.5" width="150" height="8.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                            <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera/Rover Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jec-YO-f61">
+                                            <rect key="frame" x="4" y="79.5" width="150" height="8.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="0.5215378853" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Jec-YO-f61" secondAttribute="trailing" constant="6" id="56x-LW-mp7"/>
+                                    <constraint firstAttribute="bottom" secondItem="vpM-Yg-vEr" secondAttribute="bottom" constant="15" id="93X-mx-94S"/>
+                                    <constraint firstItem="qpq-RE-Gcy" firstAttribute="leading" secondItem="C4O-iW-XAv" secondAttribute="leading" id="Be4-Lc-Xv4"/>
+                                    <constraint firstItem="cHl-1r-Q39" firstAttribute="top" secondItem="C4O-iW-XAv" secondAttribute="top" constant="70" id="DpA-Cr-Ele"/>
+                                    <constraint firstAttribute="trailing" secondItem="qpq-RE-Gcy" secondAttribute="trailing" id="FBS-Td-j5d"/>
+                                    <constraint firstAttribute="bottom" secondItem="Jec-YO-f61" secondAttribute="bottom" constant="5" id="OwY-YO-N1C"/>
+                                    <constraint firstAttribute="bottom" secondItem="qpq-RE-Gcy" secondAttribute="bottom" id="bGG-XF-gIB"/>
+                                    <constraint firstItem="qpq-RE-Gcy" firstAttribute="top" secondItem="C4O-iW-XAv" secondAttribute="top" id="c3b-9C-rlF"/>
+                                    <constraint firstItem="vpM-Yg-vEr" firstAttribute="leading" secondItem="C4O-iW-XAv" secondAttribute="leading" constant="4" id="cZN-pq-oP4"/>
+                                    <constraint firstAttribute="trailing" secondItem="vpM-Yg-vEr" secondAttribute="trailing" constant="6" id="k4g-G1-Wam"/>
+                                    <constraint firstAttribute="bottom" secondItem="cHl-1r-Q39" secondAttribute="bottom" constant="5" id="mbJ-x9-3Iy"/>
+                                    <constraint firstAttribute="trailing" secondItem="cHl-1r-Q39" secondAttribute="trailing" constant="8" id="t5T-6K-SoK"/>
+                                    <constraint firstItem="Jec-YO-f61" firstAttribute="leading" secondItem="C4O-iW-XAv" secondAttribute="leading" constant="4" id="w0O-Gn-wiG"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="nasaPhoto" destination="qpq-RE-Gcy" id="yKH-aV-LCa"/>
+                                    <outlet property="roverDetailLabel" destination="Jec-YO-f61" id="bcA-qR-nmc"/>
+                                    <outlet property="roverNameLabel" destination="vpM-Yg-vEr" id="Evy-vg-blS"/>
+                                    <outlet property="sendEmail" destination="Jec-YO-f61" id="JPv-bh-egT"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="delegate" destination="1e7-pT-DEk" id="pIh-r3-sz0"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="w2n-bi-Uqk"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6S7-EA-nvO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1200" y="22.8515625"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dpn-0T-S08">
+            <objects>
+                <viewController id="jEC-kD-KHW" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LLa-UQ-DEM"/>
+                        <viewControllerLayoutGuide type="bottom" id="8Vu-YT-IZ4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tMF-Od-sHy">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p2i-Bb-svb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1880" y="23"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IPp-I3-eY3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="HRb-lw-cv7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="wYS-gl-Rg9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1e7-pT-DEk" kind="relationship" relationship="rootViewController" id="s06-1Y-3xd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aDX-lB-IcH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="434.375" y="22.8515625"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Email" width="128" height="96"/>
+    </resources>
 </document>
